RESOLVED FIXED12258
fast/tokenizer/002 test broken
https://bugs.webkit.org/show_bug.cgi?id=12258
Summary fast/tokenizer/002 test broken
Alexey Proskuryakov
Reported 2007-01-13 09:50:05 PST
r18833, my fault. -layer at (0,0) size 800x600 - RenderBlock {HTML} at (0,0) size 800x600 - RenderBody {BODY} at (8,8) size 784x584 +layer at (0,0) size 800x34 + RenderBlock {HTML} at (0,0) size 800x34 + RenderBody {BODY} at (8,8) size 784x18
Attachments
proposed fix (4.01 KB, patch)
2007-01-13 10:10 PST, Alexey Proskuryakov
darin: review+
Alexey Proskuryakov
Comment 1 2007-01-13 10:10:08 PST
Created attachment 12417 [details] proposed fix I couldn't run all the tests due to bug 12251, so I suppose there will be more inconsequential changes to results outside fast/tokenizer.
David Kilzer (:ddkilzer)
Comment 2 2007-01-13 15:00:30 PST
(In reply to comment #1) > I couldn't run all the tests due to bug 12251, so I suppose there will be more > inconsequential changes to results outside fast/tokenizer. The run-webkit-tests script supports an ignore test option just for this type of issue: -i|--ignore-tests Comma-separated list of directories or tests to ignore
Darin Adler
Comment 3 2007-01-14 06:11:09 PST
Comment on attachment 12417 [details] proposed fix Looks great. I don't like that this calls writeRawData even if len is 0, though. It's also a bit unfortunate that we need to create a TextResourceDecoder even if there was no data to decode. I'm not sure either of those is a problem. I think I'll still say r=me.
Alexey Proskuryakov
Comment 4 2007-01-14 10:28:34 PST
Committed revision 18844. Ran the tests with the assertion disabled (proposed fix for bug 12251).
Note You need to log in before you can comment on or make changes to this bug.