        Reviewed by Darin.

http://bugs.webkit.org/show_bug.cgi?id=12258
        fast/tokenizer/002 test broken

WebCore:
        * loader/FrameLoader.h: Added a flush parameter to write().
        * loader/FrameLoader.cpp:
        (WebCore::FrameLoader::write): Ditto.
        (WebCore::FrameLoader::endIfNotLoading): Instead of poorly duplicating the logic in write(),
        call it directly.

LayoutTests:
        * editing/selection/designmode-no-caret-expected.txt:
        * fast/dom/HTMLHeadElement/textInHead4-expected.txt:
        * fast/parser/broken-comments-vs-parsing-mode-expected.txt:
        * fast/parser/tabs-in-scripts-expected.txt:
        * fast/tokenizer/external-script-document-write-expected.txt:
        * fast/tokenizer/missing-title-end-tag-1-expected.txt:
        * tables/mozilla/images/adforce_imgis_com-expected.txt:
        * tables/mozilla_expected_failures/images/adforce_imgis_com-expected.txt:
        Updated the results (inconsequential changes only).



Canonical link: https://commits.webkit.org/15850@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@18844 268f45cc-cd09-0410-ab3c-d52691b4dbfc